--- a/construction/appointment_booking/frontend/angular.json
+++ b/construction/appointment_booking/frontend/angular.json
@@ -24,6 +24,12 @@
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
+            "fileReplacements": [
+              {
+                "replace": "src/environments/environment.ts",
+                "with": "src/environments/environment.ts"
+              }
+            ],
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/assets"
@@ -54,7 +60,13 @@
                   "maximumError": "8kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ]
             },
             "development": {
               "optimization": false,
@@ -102,5 +114,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
